gccida/g2/classify_argument
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/classify_argument/src/i386.c:2106:25: error: must use 'enum' tag to refer to type 'machine_mode'
int  classify_argument( machine_mode mode, tree type, x86_64_reg_class *classes, int bit_offset) 
                        ^
                        enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/classify_argument/src/i386.c:2106:55: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
int  classify_argument( machine_mode mode, tree type, x86_64_reg_class *classes, int bit_offset) 
                                                      ^
                                                      enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/classify_argument/src/i386.c:2122:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class *v21; // r9 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/classify_argument/src/i386.c:2123:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class v22; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/classify_argument/src/i386.c:2128:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class v27; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/classify_argument/src/i386.c:2142:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class *v42; // r9 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/classify_argument/src/i386.c:2143:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class v43; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/classify_argument/src/i386.c:2148:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class v48; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/classify_argument/src/i386.c:2158:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class v58; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/classify_argument/src/i386.c:2163:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class v63; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/classify_argument/src/i386.c:2164:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class *v64; // rcx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/classify_argument/src/i386.c:2167:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class v67; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/classify_argument/src/i386.c:2181:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class subclasses[4]; // [rsp+20h] [rbp-48h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/classify_argument/src/i386.c:2308:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( v39->block.abstract_origin) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/classify_argument/src/i386.c:2343:13: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( rtl[1] == 37 ) 
     ~~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/classify_argument/src/i386.c:2367:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( *( _BYTE *)( rtl->fld[0].rtwint + 61) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/classify_argument/src/i386.c:2459:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( v18->block.abstract_origin) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/classify_argument/src/i386.c:2489:11: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( j[1] == 37 ) 
     ~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/classify_argument/src/i386.c:2492:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( *( _BYTE *)( j->fld[0].rtwint + 61) >> 1), 
  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/classify_argument/src/obj/i386.o] Error 1
